Update azure-pipelines-3.yml for Azure Pipelines

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -14,22 +14,16 @@ steps:
     feedsToUse: 'internal'
     vstsFeed: '1318ec39-107b-4140-a370-c5ec9631aee0'
     vstsFeedPackage: 'fc5c7dc7-c756-4468-a1e2-4def3ce82084'
-    vstsPackageVersion: '19.11.512'
+    vstsPackageVersion: '19.11.513'
 - task: CmdLine@2
   inputs:
     script: |
       sudo mv $(System.DefaultWorkingDirectory)/twistcli /usr/bin/twistcli
       sudo chmod +x /usr/bin/twistcli
       docker pull ubuntu:16.04
-- task: prisma-cloud-compute-scan@1
+- task: CmdLine@2
   inputs:
-    scanType: 'images'
-    twistlockService: 'euler'
-    vulnerabilityThreshold: 'high'
-    onlyFixed: false
-    gracePeriod: '0'
-    complianceThreshold: 'high'
-    artifact: 'ubuntu:16.04'
+    script: '/usr/bin/twistcli images scan --address $(TL_CONSOLE_URL) --user $(TL_USER) --password $(TL_PASS) --details --ci my_tweet_app:$(build.buildId) | tee -a output && grep "Compliance threshold check results: PASS" output && grep "Vulnerability threshold check results: PASS" output'
 - task: Docker@2
   inputs:
     command: 'buildAndPush'
