--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -23,7 +23,7 @@ steps:
       docker pull ubuntu:16.04
 - task: CmdLine@2
   inputs:
-    script: '/usr/bin/twistcli images scan --address $(TL_CONSOLE_URL) --user $(TL_USER) --password $(TL_PASS) --details --ci my_tweet_app:$(build.buildId) | tee -a output && grep "Compliance threshold check results: PASS" output && grep "Vulnerability threshold check results: PASS" output'
+    script: '/usr/bin/twistcli images scan --address $(TL_CONSOLE_URL) --user $(TL_USER) --password $(TL_PASS) --details --ci ubuntu:16.04 | tee -a output && grep "Compliance threshold check results: PASS" output && grep "Vulnerability threshold check results: PASS" output'
 - task: Docker@2
   inputs:
     command: 'buildAndPush'
